# collie-app-cli

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE.md  README.md  build.rs  rust-toolchain.toml
src/: compose_helper.rs  logger.rs  main.rs  version.rs
src/down/: mod.rs
src/new/: mod.rs
src/new/tpl/: manifest.yaml
src/up/: mod.rs  rand_pass.rs
windows/: app.manifest  app.rc
